--- a/src/gui/music_control.ui
+++ b/src/gui/music_control.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>music_Control</class>
- <widget class="QDockWidget" name="music_Control">
+ <class>music_control</class>
+ <widget class="QDockWidget" name="music_control">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>384</width>
-    <height>158</height>
+    <height>344</height>
    </rect>
   </property>
   <property name="windowIcon">
@@ -18,7 +18,7 @@
    <bool>true</bool>
   </property>
   <property name="features">
-   <set>QDockWidget::AllDockWidgetFeatures</set>
+   <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
   </property>
   <property name="windowTitle">
    <string>tuna.dock.title</string>
