Added source drop down to dock
Closes #119

--- a/src/gui/music_control.ui
+++ b/src/gui/music_control.ui
@@ -60,6 +60,9 @@
        </spacer>
       </item>
       <item>
+       <widget class="QComboBox" name="cb_source"/>
+      </item>
+      <item>
        <widget class="QWidget" name="control_widget" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <property name="spacing">
