VLC Source: Remove old source selection

--- a/src/gui/widgets/vlc.ui
+++ b/src/gui/widgets/vlc.ui
@@ -15,18 +15,11 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_19">
-     <item>
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>tuna.gui.vlc.source.name</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="cb_vlc_source_name"/>
-     </item>
-    </layout>
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>tuna.gui.vlc.mapping.text</string>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
