--- a/src/gui/widgets/vlc.ui
+++ b/src/gui/widgets/vlc.ui
@@ -19,6 +19,9 @@
      <property name="text">
       <string>tuna.gui.vlc.mapping.text</string>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item>
