--- a/src/gui/output_edit_dialog.ui
+++ b/src/gui/output_edit_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>467</width>
-    <height>493</height>
+    <width>523</width>
+    <height>563</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -15,6 +15,12 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>523</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>tuna.gui.output.edit.dialog.title</string>
@@ -65,7 +71,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QTableWidget" name="tableWidget">
+      <widget class="QTableWidget" name="table_format">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -108,41 +114,6 @@
        <attribute name="verticalHeaderHighlightSections">
         <bool>true</bool>
        </attribute>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>New Row</string>
-        </property>
-       </row>
        <column>
         <property name="text">
          <string/>
@@ -163,146 +134,6 @@
          <string/>
         </property>
        </column>
-       <item row="0" column="0">
-        <property name="text">
-         <string>%t</string>
-        </property>
-       </item>
-       <item row="0" column="1">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.title</string>
-        </property>
-       </item>
-       <item row="0" column="2">
-        <property name="text">
-         <string>%e</string>
-        </property>
-       </item>
-       <item row="0" column="3">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.linebreak</string>
-        </property>
-       </item>
-       <item row="1" column="0">
-        <property name="text">
-         <string>%m</string>
-        </property>
-       </item>
-       <item row="1" column="1">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.artist</string>
-        </property>
-       </item>
-       <item row="1" column="2">
-        <property name="text">
-         <string>%d</string>
-        </property>
-       </item>
-       <item row="1" column="3">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.disc.number</string>
-        </property>
-       </item>
-       <item row="2" column="0">
-        <property name="text">
-         <string>%n</string>
-        </property>
-       </item>
-       <item row="2" column="1">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.number</string>
-        </property>
-       </item>
-       <item row="2" column="2">
-        <property name="text">
-         <string>%a</string>
-        </property>
-       </item>
-       <item row="2" column="3">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.album</string>
-        </property>
-       </item>
-       <item row="3" column="0">
-        <property name="text">
-         <string>%r</string>
-        </property>
-       </item>
-       <item row="3" column="1">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.date.full</string>
-        </property>
-       </item>
-       <item row="3" column="2">
-        <property name="text">
-         <string>%p</string>
-        </property>
-       </item>
-       <item row="3" column="3">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.time.progress</string>
-        </property>
-       </item>
-       <item row="4" column="0">
-        <property name="text">
-         <string>%y</string>
-        </property>
-       </item>
-       <item row="4" column="1">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.date.year</string>
-        </property>
-       </item>
-       <item row="4" column="2">
-        <property name="text">
-         <string>%l</string>
-        </property>
-       </item>
-       <item row="4" column="3">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.time.length</string>
-        </property>
-       </item>
-       <item row="5" column="0">
-        <property name="text">
-         <string>%b</string>
-        </property>
-       </item>
-       <item row="5" column="1">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.label</string>
-        </property>
-       </item>
-       <item row="5" column="2">
-        <property name="text">
-         <string>%s</string>
-        </property>
-       </item>
-       <item row="5" column="3">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.space</string>
-        </property>
-       </item>
-       <item row="6" column="0">
-        <property name="text">
-         <string>%o</string>
-        </property>
-       </item>
-       <item row="6" column="1">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.time.left</string>
-        </property>
-       </item>
-       <item row="6" column="2">
-        <property name="text">
-         <string>%f</string>
-        </property>
-       </item>
-       <item row="6" column="3">
-        <property name="text">
-         <string>tuna.gui.tab.basics.format.file_name</string>
-        </property>
-       </item>
       </widget>
      </item>
      <item>
