--- a/src/gui/tuna_gui.ui
+++ b/src/gui/tuna_gui.ui
@@ -83,6 +83,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="cb_dl_cover">
+         <property name="text">
+          <string>tuna.gui.tab.basics.song.cover.enable</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QFrame" name="frame_cover">
          <property name="frameShape">
           <enum>QFrame::NoFrame</enum>
@@ -152,40 +159,9 @@
         </widget>
        </item>
        <item>
-        <widget class="QCheckBox" name="cb_dl_cover">
+        <widget class="QCheckBox" name="cb_dl_lyrics">
          <property name="text">
-          <string>tuna.gui.tab.basics.song.cover.enable</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_8">
-         <item>
-          <widget class="QCheckBox" name="cb_download_missing">
-           <property name="text">
-            <string>tuna.gui.tab.basics.song.cover.download.missing</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="cb_cover_size">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="currentIndex">
-            <number>-1</number>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="cb_remove_file_extensions">
-         <property name="text">
-          <string>tuna.gui.tab.basics.removeextensions</string>
+          <string>tuna.gui.tab.basics.song.lyrics.enable</string>
          </property>
         </widget>
        </item>
@@ -256,6 +232,37 @@
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_8">
+         <item>
+          <widget class="QCheckBox" name="cb_download_missing">
+           <property name="text">
+            <string>tuna.gui.tab.basics.song.cover.download.missing</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="cb_cover_size">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="currentIndex">
+            <number>-1</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="cb_remove_file_extensions">
+         <property name="text">
+          <string>tuna.gui.tab.basics.removeextensions</string>
+         </property>
         </widget>
        </item>
        <item>
