Spotify UI: Add extra label for custom credentials

--- a/src/gui/widgets/spotify.ui
+++ b/src/gui/widgets/spotify.ui
@@ -6,14 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>473</width>
-    <height>495</height>
+    <width>478</width>
+    <height>507</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>tuna.gui.tab.spotify.custom_credentials</string>
+     </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_21">
      <item>
